--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@types/react-redux": "^7.1.21",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
+    "@umijs/fabric": "^2.10.0",
     "@vitejs/plugin-react": "^1.1.4",
     "typescript": "^4.4.4",
-    "vite": "^2.7.10"
+    "vite": "^2.7.10",
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
