--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .js,.ts,.jsx,tsx --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.1",
@@ -29,6 +31,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@umijs/fabric": "^2.10.0",
     "@vitejs/plugin-react": "^1.1.4",
+    "husky": "^7.0.4",
     "typescript": "^4.4.4",
     "vite": "^2.7.10",
     "vite-plugin-eslint": "^1.3.0"
